--- a/Exercicio_01/index.html
+++ b/Exercicio_01/index.html
@@ -17,8 +17,8 @@
         <div class="container">
             <form action="">
                 <input type="text" name="" id="" placeholder="Nome completo do beneficiario">
-                <input type="text" name="" id="" placeholder="Número da conta">
-                <input type="text" name="" id="" placeholder="Valor">
+                <input type="number" name="" id="" placeholder="Número da conta">
+                <input type="number" name="" id="" placeholder="Valor">
                 <input type="text" name="" id="" placeholder="Descrição (opcional)">
                 <button>
                     Depositar
