--- a/Exercicio_01/index.html
+++ b/Exercicio_01/index.html
@@ -16,15 +16,17 @@
     <section>
         <div class="container">
             <form action="">
-                <input type="text" name="" id="" placeholder="Nome completo do beneficiario">
-                <input type="number" name="" id="" placeholder="Número da conta">
-                <input type="number" name="" id="" placeholder="Valor">
-                <input type="text" name="" id="" placeholder="Descrição (opcional)">
-                <button>
+                <input type="text"id="nome_beneficiario" placeholder="Nome completo do beneficiario" required>
+                <input type="number"id="numero_conta" placeholder="Número da conta" required>
+                <input type="number" id="valor" placeholder="Valor" required>
+                <input type="text" id="descricao" placeholder="Descrição (opcional)">
+                <button id="botao_depositar" onclick="tentativa_deposito()">
                     Depositar
                 </button>
             </form>
         </div>
     </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
